# hellomimir-dev

./: .dockerignore  .env.example  .env.local.example  .gitignore  PROJECT_STRUCTURE.md  README.md  REORGANIZATION_SUMMARY.md  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  quickstart.sh  test_ingestion.sh
backend/app/: __init__.py  main.py
backend/app/api/routes/: health.py  papers.py  users.py
backend/app/core/: auth.py  config.py  logging.py
backend/app/db/: models.py  supabase_client.py
backend/app/services/: arxiv_service.py  deepseek_service.py  llm_service.py  paper_service.py  pdf_service.py  user_service.py
devlog/: 2512041217.txt  2512041348.txt  2512041509.txt  2512041530.txt  2512041600.txt  2512041630.txt  2512041642.txt  2512042332.txt  2512042354.txt  2512050005.txt  2512050025.txt  2512050034.txt  2512050040.txt  2512050052.txt  2512050122.txt  2512050149.txt  2512050318.txt  2512062251.txt  2512062328.txt  2512070026.txt
docs/: ARCHITECTURE.md  DOCKER_QUICKSTART.md  MIGRATION_GUIDE.md
frontend/: .env.local.example  Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/components/: FieldCard.tsx  Header.tsx  PaperView.tsx  Quiz.tsx  ReadingLevelTabs.tsx
src/lib/: arxivClient.ts  dailyPaperService.ts  llmClient.ts  supabaseClient.ts
src/types/: index.ts
supabase/migrations/: 001_initial_schema.sql  002_add_full_text_and_prereading.sql  (+1 more)
(+36 files in other folders)
